Updated to reflect our info

--- a/public/static/en/about.html
+++ b/public/static/en/about.html
@@ -1,5 +1,140 @@
-<h1>About</h1>
 
-<p>You should add an 'About' page here.</p>
+<!DOCTYPE html>
+<html xmlns='http://www.w3.org/1999/xhtml'>
+<meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
+<meta content='en' name='requested-locale'>
+<link href="/assets/blueprint/screen.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/blueprint/local.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/blueprint/print.css" media="print" rel="stylesheet" type="text/css" />
+<link href="/assets/specific/shared/_header.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/ui-lightness/jquery-ui-1.8.16.custom.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/common/sherpa.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/specific/shared/_alpha_pagination.css" media="screen" rel="stylesheet" type="text/css" />
 
-<p>This file is located at: <em>[bibapp]/public/static/en/about.html</em></p>
+<script src="/assets/application.js" type="text/javascript"></script>
+<script src="/assets/gbsclasses.js" type="text/javascript"></script>
+<script src="/assets/jsperanto/jquery.jsperanto.js" type="text/javascript"></script>
+<script src="/assets/locale.js" type="text/javascript"></script>
+<meta content="authenticity_token" name="csrf-param" />
+<meta content="eHZziG3WdTEf48zaxO+4V2eUuCXayU+MGrQQjtJVKqg=" name="csrf-token" />
+    <title>Discover @ Loyola - Works</title>
+  </head>
+  <body>
+    <div class='container'>
+      <div class='span-24' id='header'>
+        <div class='span-23 prepend-1'>
+          <div class='span-12'>
+            <a href="/works"><img alt="Discover @ Loyola" src="/assets/bibapp.png" /></a>
+          </div>
+          <div class='span-7 prepend-3 last'>
+            <form accept-charset="UTF-8" action="/search" class="header-search-form" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div>
+                  <div id='search-box'>
+                    <input id="q" name="q" size="21" type="text" />
+                    <input name="commit" type="submit" value="Search" />
+                  </div>
+                  <span class='advanced-search-link'><a href="/search/advanced">Advanced</a></span>
+            </form>
+          </div>
+          <div class='span-22'>
+            <p id='tagline'>Find experts on campus... Promote their research... Archive their work</p>
+          </div>
+          <div class='span-14'>
+            <ul id='navigation'>
+              <li id='current'>
+                <a href='/works?view=all'>
+                  <span>Works</span>
+                </a>
+              </li>
+              <li>
+                <a href='/groups'>
+                  <span>Groups</span>
+                </a>
+              </li>
+              <li>
+                <a href='/people'>
+                  <span>People</span>
+                </a>
+              </li>
+              <li>
+                <a href='/publications'>
+                  <span>Publications</span>
+                </a>
+              </li>
+              <li>
+                <a href='/publishers'>
+                  <span>Publishers</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class='span-8 last'>
+            <ul class='header-nav' id='global-nav'>
+              <li>
+                <a href="/static/en/about.html">About</a>
+              </li>
+              <li>
+                <a href="/static/en/faq.html">FAQ</a>
+              </li>
+              <li>
+                <span><a href="/login?return_to=%2F">Login | Signup</a></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
+      <div class='span-22 prepend-1' id='flash-messages'>
+       <!--- Flash messages --> 
+      </div>
+      <!-- ### Main -->
+      <div class='span-24'>
+        <div class='span-22 prepend-1'>
+          <div class='span-15'>
+            <div class='span-15'>
+            	<!---Page content -->
+            	<h3>About Discover @ Loyola</h3>
+            	<div class="uihtml">
+            	<p>Discover @ Loyola uses linked data to highlight, expose, and record the scholarly output of the Health Sciences Division at Loyola University Chicago. In collaboration with the IT Department, the Health Sciences Library created this database with the following goals:</p>
+            	</div>		
+            	<div class="uihtml">	
+            		<ul>	
+            			<li>Serve as a repository of scholarly publications produced by the Health Sciences Division.</li>
+            			<li>Help the global research community to locate experts in the field so as to facilitate scientific knowledge.</li>
+						<li>Assist researchers across campus in identifying local research experts for collaboration.</li>
+					</ul>
+            	</div>
+				<div class="uihtml">
+				<p>The pilot version of Discover @ Loyola features the scholarly output of the Oncology Institute, but will expand to include the Stritch School of Medicine, Marcella Niehoff School of Nursing, and the Graduate School with programs like the Institute of Public Health, the Neiswanger Institute for Bioethics and Health Policy, and the Leischner Institute for Medical Education. </p>
+
+        <p>If you'd like to be added to Discover, please contact your department liason. </p>
+        <!--- Insert dropdown box with dept name and contact person here -->
+
+				<p>We welcome your feedback! Please contact <a href="mailto:bibapp@luc.edu">bibapp@luc.edu</a> with any questions, comments, or concerns.</p>
+         <!-- End page content -->
+     </div>
+     	</div>
+     		</div>
+     			</div>
+
+      <div class='span-24' id='footer'>
+        <div class='span-23 prepend-1'>
+          <p>
+            <strong>
+              <a href='http://www.luc.edu'>Loyola University Chicago</a>
+              |
+              <a href='http://library.luhs.org'>Loyola Health Sciences Library</a>
+            </strong>
+            <br>
+            2160 S. First Ave. Maywood, IL 60513
+            <br>
+            Powered by
+            <strong>
+              <a href="http://bibapp.org/">BibApp</a>
+            </strong>
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+  
+</html>
