--- a/public/static/en/faq.html
+++ b/public/static/en/faq.html
@@ -1,5 +1,136 @@
-<h1>FAQ</h1>
 
-<p>You should add your campus FAQ here.</p>
+<!DOCTYPE html>
+<html xmlns='http://www.w3.org/1999/xhtml'>
+<meta content='text/html;charset=utf-8' http-equiv='Content-Type'>
+<meta content='en' name='requested-locale'>
+<link href="/assets/blueprint/screen.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/blueprint/local.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/blueprint/print.css" media="print" rel="stylesheet" type="text/css" />
+<link href="/assets/specific/shared/_header.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/ui-lightness/jquery-ui-1.8.16.custom.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/common/sherpa.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/assets/specific/shared/_alpha_pagination.css" media="screen" rel="stylesheet" type="text/css" />
+<script src="/assets/application.js" type="text/javascript"></script>
+<script src="/assets/gbsclasses.js" type="text/javascript"></script>
+<script src="/assets/jsperanto/jquery.jsperanto.js" type="text/javascript"></script>
+<script src="/assets/locale.js" type="text/javascript"></script>
+<meta content="authenticity_token" name="csrf-param" />
+<meta content="eHZziG3WdTEf48zaxO+4V2eUuCXayU+MGrQQjtJVKqg=" name="csrf-token" />
+    <title>Discover @ Loyola - Works</title>
+  </head>
+  <body>
+    <div class='container'>
+      <div class='span-24' id='header'>
+        <div class='span-23 prepend-1'>
+          <div class='span-12'>
+            <a href="/works"><img alt="Discover @ Loyola" src="/assets/bibapp.png" /></a>
+          </div>
+          <div class='span-7 prepend-3 last'>
+            <form accept-charset="UTF-8" action="/search" class="header-search-form" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div>
+                  <div id='search-box'>
+                    <input id="q" name="q" size="21" type="text" />
+                    <input name="commit" type="submit" value="Search" />
+                  </div>
+                  <span class='advanced-search-link'><a href="/search/advanced">Advanced</a></span>
+            </form>
+          </div>
+          <div class='span-22'>
+            <p id='tagline'>Find experts on campus... Promote their research... Archive their work</p>
+          </div>
+          <div class='span-14'>
+            <ul id='navigation'>
+              <li id='current'>
+                <a href='/works?view=all'>
+                  <span>Works</span>
+                </a>
+              </li>
+              <li>
+                <a href='/groups'>
+                  <span>Groups</span>
+                </a>
+              </li>
+              <li>
+                <a href='/people'>
+                  <span>People</span>
+                </a>
+              </li>
+              <li>
+                <a href='/publications'>
+                  <span>Publications</span>
+                </a>
+              </li>
+              <li>
+                <a href='/publishers'>
+                  <span>Publishers</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class='span-8 last'>
+            <ul class='header-nav' id='global-nav'>
+              <li>
+                <a href="/static/en/about.html">About</a>
+              </li>
+              <li>
+                <a href="/static/en/faq.html">FAQ</a>
+              </li>
+              <li>
+                <span><a href="/login?return_to=%2F">Login | Signup</a></span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
+      <div class='span-22 prepend-1' id='flash-messages'>
+       <!--- Flash messages --> 
+      </div>
+      <!-- ### Main -->
+      <div class='span-24'>
+        <div class='span-22 prepend-1'>
+          <div class='span-15'>
+            <div class='span-15'>
+            	<!---Page content -->
+            	<h3>Frequently Asked Questions </h3>
+            	<div class="uihtml">
+            	<p><strong>Where do the citations come from? </strong><br />
+				BibApp is populated directly by the citations that exist in the HSD Faculty Information System. 
+				</p>
 
-<p>This file is located at: <em>[bibapp]/public/static/en/faq.html</em></p>
+				<p><strong>How do I add or change information in my profile?</strong><br />
+				Profiles are maintained by librarians at the Health Sciences Library. Please email <a href="mailto:discoverHSD@luc.edu">DiscoverHSD@luc.edu</a> with any changes or updates.
+				</p>
+				
+				<p><strong>What kind of platform is Discover @ Loyola using?</strong><br />
+				Discover @ Loyola runs on BibApp, and open source software package that uses Ruby on Rails, Solr, and MySQL and is generously hosted by the HSD IT Department. </p>
+
+
+            	</div>
+         <!-- End page content -->
+     </div>
+     	</div>
+     		</div>
+     			</div>
+
+      <div class='span-24' id='footer'>
+        <div class='span-23 prepend-1'>
+          <p>
+            <strong>
+              <a href='http://www.luc.edu'>Loyola University Chicago</a>
+              |
+              <a href='http://library.luhs.org'>Loyola Health Sciences Library</a>
+            </strong>
+            <br>
+            2160 S. First Ave. Maywood, IL 60513
+            <br>
+            Powered by
+            <strong>
+              <a href="http://bibapp.org/">BibApp</a>
+            </strong>
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+  
+</html>
